<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".WelcomeActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:contentDescription="@string/welcome_image"
        app:srcCompat="@drawable/welcome" />

    <FrameLayout
        android:layout_width="match_parent"
        android:background="#CFE3FC"
        android:layout_weight="0.5"
        android:layout_height="280dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/welcome_background"
            android:padding="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#142237"
                    android:text="Be aware \nStay healthy"
                    android:textSize="38sp"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:textColor="@color/textColorGray"
                    android:text="@string/welcome_text"
                    android:textSize="16sp"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvGetStarted"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/get_started"
                    android:textAllCaps="true"
                    android:textColor="@color/textColorDeepBlue"
                    android:textStyle="bold"/>

                <ImageButton
                    android:id="@+id/getStatedBtn"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/get_started_icon_image"
                    android:background="@drawable/welcome_btn"
                    android:src="@drawable/ic_arrow"
                    />

            </LinearLayout>

        </RelativeLayout>
    </FrameLayout>
</LinearLayout>