<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="11dp"
    android:orientation="vertical"
    tools:context=".SymptomsActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/symptoms"
        android:fontFamily="@font/poppins_light"
        android:textSize="22sp"
        android:textColor="@color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/symptoms_card_background">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/headache"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/headache"
                    android:textColor="@color/textColorDeepBlue"
                    android:layout_marginVertical="6dp"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:gravity="center_horizontal" />

            </RelativeLayout>


        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/symptoms_card_background">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/cough"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:text="Cough"
                    android:textColor="@color/textColorDeepBlue"
                    android:layout_marginVertical="6dp"
                    android:fontFamily="@font/poppins_medium"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:gravity="center_horizontal" />

            </RelativeLayout>


        </FrameLayout>
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/symptoms_card_background">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/fever"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginVertical="6dp"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center_horizontal"
                    android:text="Fever"
                    android:textColor="@color/textColorDeepBlue"
                    android:textSize="12sp"
                    android:textStyle="bold" />

            </RelativeLayout>


        </FrameLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="Preventions"
        android:textSize="22dp"
        android:fontFamily="@font/poppins_light"
        android:textColor="@color/black"/>



    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="10dp">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="180dp"
            android:src="@drawable/wear_mask"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/prevention_card_background"
                android:gravity="center"
                android:paddingRight="9dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Wear face mask"
                    android:textStyle="bold"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="@color/textColorDeepBlue"
                    android:layout_marginVertical="8dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineHeight="14dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/wear_face_mask_text"
                    android:textColor="@color/textColorGray"
                    android:textSize="10dp" />
            </LinearLayout>

        </RelativeLayout>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="10dp">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="180dp"
            android:src="@drawable/wash_hands"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/prevention_card_background"
                android:gravity="center"
                android:paddingRight="9dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Wash your hands"
                    android:textStyle="bold"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="@color/black"
                    android:layout_marginVertical="8dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineHeight="14dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/wash_your_hand_text"
                    android:textSize="10dp" />
            </LinearLayout>

        </RelativeLayout>

    </FrameLayout>

</LinearLayout>